--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,8 @@
+[build]
+  functions = "netlify-functions" # Folder containing serverless functions
+  publish = "build" # For React/Next.js static files
+
 [[redirects]]
-  from = "/*"
-  to = "/index.html"
+  from = "/api/*"
+  to = "/.netlify/functions/:splat"
   status = 200
